--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,8 @@ a {
 }
 
 .subtitulo {
-  font-size: 26px;
+  font-size: 30px;
+  letter-spacing: 0.40em;
 }
 
 .subtitulo,
@@ -100,7 +101,6 @@ a {
 .homeText img {
   position: absolute;
   top: 50%;
-  right: 2.5vw;
   width: 40%;
   height: auto;
   transform: translateY(-50%);
@@ -131,25 +131,28 @@ a {
   transform: translateY(3px);
 }
 
+.containerHome_h {
+  position: absolute;
+  right: 2.5vw;
+  width: 48vw;
+  height: auto;
+}
 
-
-
-
-
-
+.homeh2,
+.homeh3 {
+  text-align: right;
+  margin: 0;
+}
 
 .homeh3 {
   color: #691B31;
   font-family: "Montserrat", sans-serif;
   font-weight: 300;
-  margin: 0;
   font-size: 22px;
 }
 
 .homeh2 {
-  margin: 0;
   font-size: 26px;
-  width: 55vw;
 }
 
 /*  */
@@ -181,7 +184,7 @@ a {
     transform: translateY(0);
     filter: drop-shadow(0 10px 20px rgba(184, 175, 175, 0.2));
   }
-  
+
   100% {
     transform: translateY(-30px);
     filter: drop-shadow(0 10px 20px rgba(184, 175, 175, 0.2));
@@ -233,9 +236,9 @@ a {
 
 .featured {
   background-size: cover;
-  background-position: center;  
-  background-attachment: fixed; 
-  display: flex; 
+  background-position: center;
+  background-attachment: fixed;
+  display: flex;
   width: 100vw;
   height: 63vh;
   align-items: center;
@@ -468,8 +471,8 @@ select.form-control::-ms-expand {
 
 .book-card-container {
   width: 135px;
-  height: 200px;
-  margin: 10px;
+  height: 210px;
+  margin: 10px ;
   z-index: 1;
 }
 
@@ -990,13 +993,14 @@ input::-moz-focus-inner {
 /* Modal */
 /*  */
 
+
 .modal-overlay {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 80%;
-  height: 60%;
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1103,6 +1107,55 @@ input::-moz-focus-inner {
   }
 }
 
+
+
+@keyframes scaleAndExpand {
+  0% {
+    transform: scaleY(0.1) scaleX(0.20);
+    height: 2px;
+    opacity: 0.10;
+    background-color: #DDC9A3;
+  }
+
+  25% {
+    transform: scaleY(0.25) scaleX(0.40);
+    height: auto;
+    opacity: 0.30;
+  }
+
+  50% {
+    transform: scaleY(0.5) scaleX(0.45);
+    height: auto;
+    opacity: 0.50;
+  }
+
+  75% {
+    transform: scaleY(0.75) scaleX(0.55);
+    height: auto;
+    opacity: 0.70;
+  }
+
+  100% {
+    transform: scaleY(1) scaleX(1);
+    height: auto;
+    opacity: 1;
+  }
+}
+
+
+
+.modal-content {
+  /* Otros estilos aquí */
+  animation: scaleAndExpand 0.5s ease-out;
+}
+
+
+.modal-overlay.modal-closed .modal-content {
+  animation: scaleAndExpandOut 0.5s ease-out forwards;
+}
+
+
+
 /*  */
 /* Responsivo */
 /*  */
@@ -1154,21 +1207,20 @@ input::-moz-focus-inner {
   .inlay {
     top: 2%;
   }
-
 }
 
 @media screen and (max-width: 550px) {
 
   .subtitulo {
-    font-size: 16px;
+    font-size: 24px;
     margin: 0;
-  } 
+  }
 
   /* Home */
   .homeText img {
     position: absolute;
     top: 30%;
-    right: 5vw;
+    left: 5vw;
     width: 90%;
     height: auto;
     transform: translateY(-50%);
@@ -1188,6 +1240,18 @@ input::-moz-focus-inner {
     top: 15vw;
   }
 
+  .containerHome_h {
+    position: absolute;
+    left: 5vw;
+    width: 90vw;
+    height: auto;
+  }
+
+  .homeh2,
+  .homeh3 {
+    text-align: left;
+  }
+
   .homeh3 {
     font-size: 16px;
     font-weight: 400;
@@ -1195,8 +1259,8 @@ input::-moz-focus-inner {
 
   .homeh2 {
     font-size: 20px;
-    width: 99vw;
   }
+
 
   /* AboutUs */
   .AboutUs {
@@ -1309,4 +1373,15 @@ input::-moz-focus-inner {
   .home span {
     display: block;
   }
+}
+
+@media screen and (max-width: 320px) and (max-height: 820px) {
+  .AboutUs {
+    height: 120vh;
+  }
+
+  .featured {
+    height: 47vh;
+  }
+
 }
